Examples/bad/parse/cond.lifp
// (cond El1 El2 [El3])

(cond)
(cond a)
(cond way too much args)
